{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 359,
  "lineage": "bb51ae98-db13-6f4a-089b-cb1c97d1abf4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06caf714fde2b8e39",
            "arn": "arn:aws:ec2:us-east-2:911167909056:elastic-ip/eipalloc-06caf714fde2b8e39",
            "domain": "vpc",
            "id": "eipalloc-06caf714fde2b8e39",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-18-222-9-170.us-east-2.compute.amazonaws.com",
            "public_ip": "18.222.9.170",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "devhub-nat-eip"
            },
            "tags_all": {
              "Name": "devhub-nat-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "devhub_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:911167909056:internet-gateway/igw-02a242d53cd015734",
            "id": "igw-02a242d53cd015734",
            "owner_id": "911167909056",
            "tags": {
              "Name": "devhub-igw"
            },
            "tags_all": {
              "Name": "devhub-igw"
            },
            "vpc_id": "vpc-02c650856c0ec1487"
          },
          "dependencies": [
            "aws_vpc.devhub_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "devhub_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:911167909056:loadbalancer/app/devhub-alb/773bbc5ac5f9ed9a",
            "arn_suffix": "app/devhub-alb/773bbc5ac5f9ed9a",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "devhub-alb-908927498.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:911167909056:loadbalancer/app/devhub-alb/773bbc5ac5f9ed9a",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "devhub-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-04451fda5c2289b52"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01e5938b7868caa03"
              },
              {
                "subnet_id": "subnet-0ccced3a644527aeb"
              }
            ],
            "subnets": [
              "subnet-01e5938b7868caa03",
              "subnet-0ccced3a644527aeb"
            ],
            "tags": {
              "Name": "devhub-alb"
            },
            "tags_all": {
              "Name": "devhub-alb"
            },
            "vpc_id": "vpc-02c650856c0ec1487",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_security_group.devhub_alb_sg",
            "aws_subnet.public_subnets",
            "aws_vpc.devhub_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "devhub_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:911167909056:listener/app/devhub-alb/773bbc5ac5f9ed9a/3778277ec156b1d3",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:911167909056:targetgroup/devhub-tg/3ec8b270ff044fd1",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:911167909056:listener/app/devhub-alb/773bbc5ac5f9ed9a/3778277ec156b1d3",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:911167909056:loadbalancer/app/devhub-alb/773bbc5ac5f9ed9a",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.devhub_alb",
            "aws_lb_target_group.devhub_tg",
            "aws_security_group.devhub_alb_sg",
            "aws_subnet.public_subnets",
            "aws_vpc.devhub_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "devhub_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:911167909056:targetgroup/devhub-tg/3ec8b270ff044fd1",
            "arn_suffix": "targetgroup/devhub-tg/3ec8b270ff044fd1",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:911167909056:targetgroup/devhub-tg/3ec8b270ff044fd1",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "devhub-tg",
            "port": 5001,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-02c650856c0ec1487"
          },
          "dependencies": [
            "aws_vpc.devhub_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "devhub_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06caf714fde2b8e39",
            "association_id": "eipassoc-0792751e8186a779f",
            "connectivity_type": "public",
            "id": "nat-018dc047665027748",
            "network_interface_id": "eni-04489d67d5ed8880c",
            "private_ip": "10.0.0.131",
            "public_ip": "18.222.9.170",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-01e5938b7868caa03",
            "tags": {
              "Name": "devhub-nat"
            },
            "tags_all": {
              "Name": "devhub-nat"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_subnet.public_subnets",
            "aws_vpc.devhub_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:911167909056:route-table/rtb-08c3b01b3d58aaf28",
            "id": "rtb-08c3b01b3d58aaf28",
            "owner_id": "911167909056",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-018dc047665027748",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "devhub-private-rt"
            },
            "tags_all": {
              "Name": "devhub-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-02c650856c0ec1487"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.devhub_nat",
            "aws_subnet.public_subnets",
            "aws_vpc.devhub_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:911167909056:route-table/rtb-08620b39736d5db49",
            "id": "rtb-08620b39736d5db49",
            "owner_id": "911167909056",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02a242d53cd015734",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "devhub-public-rt"
            },
            "tags_all": {
              "Name": "devhub-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-02c650856c0ec1487"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.devhub_igw",
            "aws_vpc.devhub_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-003400d90f434cf57",
            "route_table_id": "rtb-08c3b01b3d58aaf28",
            "subnet_id": "subnet-02e5d8576c071e6a5"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.devhub_nat",
            "aws_route_table.private_rt",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.devhub_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "private2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0900ad0c15e658468",
            "route_table_id": "rtb-08c3b01b3d58aaf28",
            "subnet_id": "subnet-0eaea84d1b237e051"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.devhub_nat",
            "aws_route_table.private_rt",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.devhub_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cb43c611e4738f57",
            "route_table_id": "rtb-08620b39736d5db49",
            "subnet_id": "subnet-01e5938b7868caa03"
          },
          "dependencies": [
            "aws_internet_gateway.devhub_igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnets",
            "aws_vpc.devhub_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "public2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-051f5eb6cc55b7bf9",
            "route_table_id": "rtb-08620b39736d5db49",
            "subnet_id": "subnet-0ccced3a644527aeb"
          },
          "dependencies": [
            "aws_internet_gateway.devhub_igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnets",
            "aws_vpc.devhub_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "devhub_alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:911167909056:security-group/sg-04451fda5c2289b52",
            "description": "Security group for ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04451fda5c2289b52",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "devhub-alb-sg",
            "name_prefix": "",
            "owner_id": "911167909056",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02c650856c0ec1487"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.devhub_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "devhub_db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:911167909056:security-group/sg-06f0980d8601ca533",
            "description": "Security group for DevHub RDS instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06f0980d8601ca533",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Allow Postgres from within VPC",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "devhub-db-sg",
            "name_prefix": "",
            "owner_id": "911167909056",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02c650856c0ec1487"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.devhub_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:911167909056:subnet/subnet-02e5d8576c071e6a5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.100.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02e5d8576c071e6a5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "911167909056",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devhub-private1"
            },
            "tags_all": {
              "Name": "devhub-private1"
            },
            "vpc_id": "vpc-02c650856c0ec1487"
          },
          "dependencies": [
            "aws_vpc.devhub_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "private2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:911167909056:subnet/subnet-0eaea84d1b237e051",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eaea84d1b237e051",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "911167909056",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devhub-private2"
            },
            "tags_all": {
              "Name": "devhub-private2"
            },
            "vpc_id": "vpc-02c650856c0ec1487"
          },
          "dependencies": [
            "aws_vpc.devhub_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:911167909056:subnet/subnet-01e5938b7868caa03",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01e5938b7868caa03",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "911167909056",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devhub-public1"
            },
            "tags_all": {
              "Name": "devhub-public1"
            },
            "vpc_id": "vpc-02c650856c0ec1487"
          },
          "dependencies": [
            "aws_vpc.devhub_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "public2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:911167909056:subnet/subnet-0ccced3a644527aeb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ccced3a644527aeb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "911167909056",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devhub-public2"
            },
            "tags_all": {
              "Name": "devhub-public2"
            },
            "vpc_id": "vpc-02c650856c0ec1487"
          },
          "dependencies": [
            "aws_vpc.devhub_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "devhub_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:911167909056:vpc/vpc-02c650856c0ec1487",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0178232e5b539a9d7",
            "default_route_table_id": "rtb-02bd7c6b227ed3122",
            "default_security_group_id": "sg-033e3520114dc1510",
            "dhcp_options_id": "dopt-0cc97b35ca7e9aac8",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02c650856c0ec1487",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02bd7c6b227ed3122",
            "owner_id": "911167909056",
            "tags": {
              "Name": "devhub-vpc"
            },
            "tags_all": {
              "Name": "devhub-vpc"
            }
          }
        }
      ]
    }
  ]
}